# coreai-optimization

./: pyproject.toml
src/coreai_opt/palettization/kmeans/: kmeans_fake_palettize.py
tests/palettization/: test_kmeans_fake_palettize.py
